# solid-bucket

./: README.md  pyproject.toml  reqs.txt
.github/workflows  /: pypi-publish.yml
solid-bucket/: __init__.py  bucket.py  cli.py
